--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <section class="main__banner">
             <div class="container">
                 <div class="main__banner-content">
-                    <h1 class="main__banner-text">Быстрая доставка</h1>
+                    <h1 class="main__banner-text">Вывезем строительный мусор за 2 часа</h1>
                     <div class="banner__description">
-                        <div class="banner__description--first">Бетона, щебня, песка</div>
-                        <div class="banner__description--first">и других нерудных материалов </div>
-                        <div class="banner__description--first">по Москве и Московской области</div>
+                        <div class="banner__description--first">Бетон, щебень, песок</div>
+                        <div class="banner__description--first">и другие материалы </div>
+                        <div class="banner__description--first">в Смоленске</div>
                     </div>
                     <div class="main__banner-button-wrapper">
                         <a href="#" class="main__banner-button button">
@@ -73,14 +73,14 @@
         </section>
         <section class="availability">
             <div class="container">
-                <h2 class="availability__header section__title">Всегда в наличии</h2>
+                <h2 class="availability__header section__title">Уберем, погрузим и вывезем любой вид мусора</h2>
                 <div class="availability__products">
                     <div class="availability__product">
                         <img src="img/content/product-1.jpg" alt="Первый продукт" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Песок речной</h3>
+                            <h3 class="availability__product-header">Бытовой мусор</h3>
                             <div class="availability__product-text">
-                                Мелкий речной песок повышает прочность, долговечность и морозоустойчивость растворов, в состав которых он входит.
+                                Бытовая техника, сантехника, мауклатура, упаковка
                             </div>
                             <div class="availability__product-price">
                                 от 330 р./т
@@ -91,9 +91,9 @@
                     <div class="availability__product">
                         <img src="img/content/product-2.jpg" alt="Второй продукт" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Щебень</h3>
+                            <h3 class="availability__product-header">Строительный мусор</h3>
                             <div class="availability__product-text">
-                                Мелкий речной песок повышает прочность, долговечность и морозоустойчивость растворов, в состав которых он входит.
+                                Оконные блоки, бетон, грунт, кирпичи
                             </div>
                             <div class="availability__product-price">
                                 от 330 р./т
@@ -104,9 +104,9 @@
                     <div class="availability__product">
                         <img src="img/content/product-3.jpg" alt="Третий продукт" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Грунт</h3>
+                            <h3 class="availability__product-header">Негабаритный мусор</h3>
                             <div class="availability__product-text">
-                                Мелкий речной песок повышает прочность, долговечность и морозоустойчивость растворов, в состав которых он входит.
+                                Старые инструменты, двери, лом металла, муз. инструменты
                             </div>
                             <div class="availability__product-price">
                                 от 330 р./т
@@ -119,7 +119,7 @@
         </section>
         <section class="advantages">
             <div class="container">
-                <h2 class="advanatages__header section__title">Наши преимущества</h2>
+                <h2 class="advanatages__header section__title">Комплексный подход</h2>
                 <div class="advantages__wrapper">
                     <div class="adnatage">
                         <img src="img/icons/icon-1.png" alt="Низкая цена">
@@ -128,7 +128,7 @@
                     </div>
                     <div class="adnatage">
                         <img src="img/icons/icon-2.png" alt="Низкая цена">
-                        <div class="advantage__title">Быстрая доставка</div>
+                        <div class="advantage__title">Упаковка в мешки</div>
                         <div class="advantage__text">Весь товар уже находится на нашем складе. Нам остается только погрузить его и в путь!</div>
                     </div>
                     <div class="adnatage">
@@ -172,19 +172,19 @@
         </section>
         <section class="services">
             <div class="container">
-                <h2 class="services__header section__title">Наши услуги</h2>
+                <h2 class="services__header section__title">Подберем для Вас подходящую по цене и грузоподъемности машину</h2>
                 <div class="services__wrapper">
                     <div class="service">
                         <img src="img/icons/image-1.png" alt="Гранитный щебень 5-20 мм">
-                        <div class="popular__product-title">Аренда самосвала</div>
+                        <div class="popular__product-title">Идеально подходит если вы делаете мелкий ремонт, меняете окна, двери или просто хотите убрать накопившейся мусор</div>
                     </div>
                     <div class="service">
                         <img src="img/icons/image-2.png" alt="Гранитный щебень 5-20 мм">
-                        <div class="popular__product-title">Аренда спецтехники</div>
+                        <div class="popular__product-title">Предназначена для накопления и вывоза мусора всех видов с большим весом и объемом</div>
                     </div>
                     <div class="service">
                         <img src="img/icons/image-3.png" alt="Гранитный щебень 5-20 мм">
-                        <div class="popular__product-title">Рытье траншеи</div>
+                        <div class="popular__product-title">Предназначен для вывоза мусора после средних и крупных ремонтов. Удобен своей мобильностью</div>
                     </div>
                 </div>
             </div>
