Заменены некоторые картинки

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>
         </section>
         <section class="main__banner">
+            <div class="bg-overlay"></div>
             <div class="container">
                 <div class="main__banner-content">
                     <h1 class="main__banner-text">Вывезем строительный мусор за 2 часа</h1>
@@ -79,39 +80,39 @@
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.1s">
                         <img src="img/content/product-1.jpg" alt="Первый продукт" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Бытовой мусор</h3>
+                            <h3 class="availability__product-header">Макулатура</h3>
                             <div class="availability__product-text">
                                 Бытовая техника, сантехника, мауклатура, упаковка
                             </div>
-                            <div class="availability__product-price">
+                            <!-- <div class="availability__product-price">
                                 от 330 р./т
-                            </div>
+                            </div> -->
                         </div>
                         <a href="#" class="availability__product-link button">Подробнее</a>
                     </div>
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.2s">
                         <img src="img/content/product-2.jpg" alt="Второй продукт" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Строительный мусор</h3>
+                            <h3 class="availability__product-header">Стекло</h3>
                             <div class="availability__product-text">
-                                Оконные блоки, бетон, грунт, кирпичи
+                                Любые изделия из стекла
                             </div>
-                            <div class="availability__product-price">
+                            <!-- <div class="availability__product-price">
                                 от 330 р./т
-                            </div>
+                            </div> -->
                         </div>
                         <a href="#" class="availability__product-link button">Подробнее</a>
                     </div>
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.3s">
                         <img src="img/content/product-3.jpg" alt="Третий продукт" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Негабаритный мусор</h3>
+                            <h3 class="availability__product-header">Металлолом</h3>
                             <div class="availability__product-text">
                                 Старые инструменты, двери, лом металла, муз. инструменты
                             </div>
-                            <div class="availability__product-price">
+                            <!-- <div class="availability__product-price">
                                 от 330 р./т
-                            </div>
+                            </div> -->
                         </div>
                         <a href="#" class="availability__product-link button">Подробнее</a>
                     </div>
