Изменены контакты, добавлена иконка, и др.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Прием макулатуры</title>
+    <title>Втор-СТ</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -17,8 +18,8 @@
                         <img src="img/logos/logo.png" class="logo__pic" alt="Логотип сайта">
                     </a>
                     <div class="header__contacts">
-                        <a href="tel:" class="phone">
-                            <div class="phone__number">800 342-13-33</div>
+                        <a href="tel:89107889053" class="phone">
+                            <div class="phone__number">8 (910) 788-90-53</div>
                             <div class="phone__content">Бесплатный звонок по России</div>
                         </a>
                         <button class="back__call">Обратный звонок</button>
@@ -31,19 +32,16 @@
                 <nav class="main__nav">
                     <ul class="main__menu-list">
                         <li class="main__menu-item">
-                            <a href="#" class="main__menu-link">Главная</a>
-                        </li>
-                        <li class="main__menu-item">
-                            <a href="#" class="main__menu-link">Каталог</a>
-                        </li>
-                        <li class="main__menu-item">
-                            <a href="#" class="main__menu-link">Услуги</a>
-                        </li>
-                        <li class="main__menu-item">
-                            <a href="#" class="main__menu-link">Доставка</a>
-                        </li>
-                        <li class="main__menu-item">
                             <a href="#" class="main__menu-link">О компании</a>
+                        </li>
+                        <li class="main__menu-item">
+                            <a href="#" class="main__menu-link">Почему мы</a>
+                        </li>
+                        <li class="main__menu-item">
+                            <a href="#" class="main__menu-link">Закупаем</a>
+                        </li>
+                        <li class="main__menu-item">
+                            <a href="#" class="main__menu-link">Сотрудничество</a>
                         </li>
                         <li class="main__menu-item">
                             <a href="#" class="main__menu-link">Контакты</a>
@@ -75,10 +73,10 @@
         </section>
         <section class="availability">
             <div class="container">
-                <h2 class="availability__header section__title">Уберем, погрузим и вывезем любой вид мусора</h2>
+                <h2 class="availability__header section__title">Закупаем</h2>
                 <div class="availability__products">
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.1s">
-                        <img src="img/content/product-1.jpg" alt="Первый продукт" class="availability__product-img">
+                        <img src="img/content/product-3.jpg" alt="Макулатура" class="availability__product-img">
                         <div class="availability__product-description">
                             <h3 class="availability__product-header">Макулатура</h3>
                             <div class="availability__product-text">
@@ -91,11 +89,11 @@
                         <a href="#" class="availability__product-link button">Подробнее</a>
                     </div>
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.2s">
-                        <img src="img/content/product-2.jpg" alt="Второй продукт" class="availability__product-img">
+                        <img src="img/content/product-1.jpg" alt="Стекло" class="availability__product-img">
                         <div class="availability__product-description">
-                            <h3 class="availability__product-header">Стекло</h3>
+                            <h3 class="availability__product-header">Полимеры</h3>
                             <div class="availability__product-text">
-                                Любые изделия из стекла
+                                стретч, пленка, канистры, пластиковые ящики, ПЭТ бутылки и др.
                             </div>
                             <!-- <div class="availability__product-price">
                                 от 330 р./т
@@ -104,7 +102,7 @@
                         <a href="#" class="availability__product-link button">Подробнее</a>
                     </div>
                     <div class="availability__product wow bounceInUp" data-wow-delay="0.3s">
-                        <img src="img/content/product-3.jpg" alt="Третий продукт" class="availability__product-img">
+                        <img src="img/content/product-2.jpg" alt="Металлолом" class="availability__product-img">
                         <div class="availability__product-description">
                             <h3 class="availability__product-header">Металлолом</h3>
                             <div class="availability__product-text">
@@ -141,7 +139,7 @@
                 </div>
             </div>
         </section>
-        <section class="popular">
+        <!-- <section class="popular">
             <div class="container">
                 <h2 class="popular__header section__title">Популярные товары</h2>
                 <div class="popular__wrapper">
@@ -171,7 +169,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="services">
             <div class="container">
                 <h2 class="services__header section__title">Подберем для Вас подходящую по цене и грузоподъемности машину</h2>
@@ -192,25 +190,27 @@
             </div>
         </section>
         <section class="map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=mymaps%3AH3bwhbV-WQA1tTciX0my70924kgBljOQ&amp;width=100%25&amp;height=515&amp;lang=ru_RU&amp;scroll=true"></script>
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A65c04d808bda3f3ae33e281cf4b83dd1c5223b5e4735b266bbeaa8300a36b0f2&amp;width=100%25&amp;height=515&amp;lang=ru_RU&amp;scroll=true"></script>
             <div class="contact__block">
                 <h2 class="contact__header">контакты</h2>
                 <div class="contact__phone-block">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="phone__icon" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
                     <div class="contact__phones-wrapper">
-                        <a href="tel:" class="contact__phone">880080000</a>
-                        <a href="tel:" class="contact__phone">84950342334</a>
+                        <a href="tel:89107889053" class="contact__phone">8 (910) 788-90-53</a>
+                        <a href="tel:699053" class="contact__phone">69-90-53 (городской)</a>
+                        <a href="tel:89107879316" class="contact__phone">8 (910) 787-93-16 (отдел оптовых продаж)</a>
+                        <a href="tel:689316" class="contact__phone">68-93-16 (городской)</a>
                     </div>
                 </div>
                 <div class="contact__address">
                     <div class="geo__svg">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="10" r="3"/><path d="M12 21.7C17.3 17 20 13 20 10a8 8 0 1 0-16 0c0 3 2.7 6.9 8 11.7z"/></svg>
                     </div>
-                    <div class="contact__address-name">Московская обл. г. Балашиха, пер. Столовой, д.23, кор. 34</div>
+                    <div class="contact__address-name">г. Смоленск, ул. Крупской, дом 68а, строение 2</div>
                 </div>
                 <div class="contact__email">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-                    <a href="mailto" class="company__email">Info@stroika.ru</a>
+                    <a href="mailto:vtor1991@mail.ru" class="company__email">vtor1991@mail.ru</a>
                 </div>
             </div>
         </section>
@@ -226,8 +226,8 @@
                         </div>
                     </div>
                     <div class="footer__right">
-                        <a href="tel:8003421333" class="phone">
-                            <div class="phone__number phone__number--white">800 342-13-33</div>
+                        <a href="tel:89107889053" class="phone">
+                            <div class="phone__number phone__number--white">8 (910) 788-90-53</div>
                             <div class="phone__content phone__content--white">Бесплатный звонок по России</div>
                         </a>
                         <button class="back__call back__call--white">Обратный звонок</button>
@@ -250,6 +250,10 @@
                 </div>
                 <div class="modal__prim">
                     <textarea name="user_prim" id="prim" cols="30" rows="4" class="modal__textarea"></textarea>
+                </div>
+                <div class="modal__conf">
+                    <input type="checkbox" name="modal__conf-checkbox" id="modal__conf-checkbox" class="modal__conf-checkbox" checked>
+                    <span class="modeal__conf-text">Согласен на обрабобку моих персональных данных в соответствии с ФЗ №152 на условиях и для целей определенных в <a href="#" class="modal__conf-link">политике конфиденциальности</a></span>
                 </div>
                 <div class="modal__send">
                     <input type="submit" name="send__button" class="button button__modal" value="Отправить">
