Изменение текстов, картинок и баннеров

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             </div>
         </section>
         <section class="main__banner" id="about">
+            <div class="fade-slider">
+                <div class="fade-slider__item fade-slider__item--metal fade-slider__item--visible"></div>
+                <div class="fade-slider__item fade-slider__item--mak"></div>
+                <div class="fade-slider__item fade-slider__item--poly"></div>
+            </div>
             <div class="bg-overlay"></div>
             <div class="container">
                 <div class="main__banner-content">
@@ -103,7 +108,7 @@
                         <div class="availability__product-description">
                             <h3 class="availability__product-header">Макулатура</h3>
                             <div class="availability__product-text">
-                                картон, книги, журналы, газетв, архив и др.
+                                Картон МС-5Б (отходы гофрокартона; картонные коробки; упаковочный картон Бумага МС-1А; МС-2А; МС-3А (архив; белая бумага (не газетная); белая бумага в виде обрезков; отходы, оставшиеся от производства бумаги.
                             </div>
                             <!-- <div class="availability__product-price">
                                 от 330 р./т
@@ -116,7 +121,7 @@
                         <div class="availability__product-description">
                             <h3 class="availability__product-header">Полимеры</h3>
                             <div class="availability__product-text">
-                                стретч, пленка, канистры, пластиковые ящики, ПЭТ бутылки и др.
+                                Отходы полиэтилена, канистры пластиковые, стретч пленка, ПВД пленка, ПНД пленка и др.
                             </div>
                             <!-- <div class="availability__product-price">
                                 от 330 р./т
@@ -129,7 +134,7 @@
                         <div class="availability__product-description">
                             <h3 class="availability__product-header">Металлолом</h3>
                             <div class="availability__product-text">
-                                Старые инструменты, двери, лом металла, муз. инструменты
+                                <!-- Старые инструменты, двери, лом металла, муз. инструменты -->
                             </div>
                             <!-- <div class="availability__product-price">
                                 от 330 р./т
@@ -235,7 +240,7 @@
                 <div class="footer__wrapper">
                     <div class="footer__left">
                         <div class="footer__logo">
-                            <img src="img/logos/logo.png" alt="логотип">
+                            <img src="img/logos/logo-white.png" alt="логотип">
                         </div>
                         <div class="copyright">
                             &copy; 2020 ВТОРСТ
